# IPIlab-BOT

./: main.py  pyproject.toml
bot/: __init__.py  dispatchers.py  keyboards.py
bot/config/: __init__.py  config.py
bot/handlers/: __init__.py  help.py  presentations.py  resources.py  search.py  start.py  unknown.py  videos.py
bot/utils/: __init__.py  n8n_client.py  text_utils.py
